[CDN] Migrate azure-mgmt-cdn to track2 SDK

--- a/src/azure-cli/azure/cli/command_modules/cdn/tests/latest/recordings/test_cdn_waf_managed_rule_set_crud.yaml
+++ b/src/azure-cli/azure/cli/command_modules/cdn/tests/latest/recordings/test_cdn_waf_managed_rule_set_crud.yaml
@@ -11,10 +11,7 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python/3.7.9 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
-        azure-mgmt-cdn/7.0.0 Azure-SDK-For-Python AZURECLI/2.19.1
-      accept-language:
-      - en-US
+      - AZURECLI/2.21.0 azsdk-python-mgmt-cdn/11.0.0 Python/3.7.9 (Windows-10-10.0.19041-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Cdn/CdnWebApplicationFirewallManagedRuleSets?api-version=2020-09-01
   response:
@@ -140,7 +137,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 19 Feb 2021 11:54:18 GMT
+      - Fri, 02 Apr 2021 10:31:32 GMT
       expires:
       - '-1'
       pragma:
@@ -172,10 +169,7 @@ interactions:
       ParameterSetName:
       - --rule-set-type --rule-set-version
       User-Agent:
-      - python/3.7.9 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
-        azure-mgmt-cdn/7.0.0 Azure-SDK-For-Python AZURECLI/2.19.1
-      accept-language:
-      - en-US
+      - AZURECLI/2.21.0 azsdk-python-mgmt-cdn/11.0.0 Python/3.7.9 (Windows-10-10.0.19041-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Cdn/CdnWebApplicationFirewallManagedRuleSets?api-version=2020-09-01
   response:
@@ -301,7 +295,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 19 Feb 2021 11:54:20 GMT
+      - Fri, 02 Apr 2021 10:31:33 GMT
       expires:
       - '-1'
       pragma:
